--- a/public/style.css
+++ b/public/style.css
@@ -177,9 +177,6 @@
   .relative {
     position: relative;
   }
-  .m-7 {
-    margin: calc(var(--spacing) * 7);
-  }
   .my-4 {
     margin-block: calc(var(--spacing) * 4);
   }
@@ -201,20 +198,11 @@
   .flex {
     display: flex;
   }
-  .table {
-    display: table;
-  }
   .w-16 {
     width: calc(var(--spacing) * 16);
   }
-  .border-collapse {
-    border-collapse: collapse;
-  }
   .transform {
     transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
-  }
-  .resize {
-    resize: both;
   }
   .items-center {
     align-items: center;
@@ -225,16 +213,9 @@
   .rounded-full {
     border-radius: calc(infinity * 1px);
   }
-  .border {
-    border-style: var(--tw-border-style);
-    border-width: 1px;
-  }
   .border-2 {
     border-style: var(--tw-border-style);
     border-width: 2px;
-  }
-  .border-white {
-    border-color: var(--color-white);
   }
   .bg-indigo-600 {
     background-color: var(--color-indigo-600);
@@ -244,9 +225,6 @@
   }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
-  }
-  .py-1 {
-    padding-block: calc(var(--spacing) * 1);
   }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
@@ -266,18 +244,24 @@
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
   }
-  .underline {
-    text-decoration-line: underline;
-  }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
-  }
 }
 body {
   border-color: var(--color-gray-800);
   background-color: var(--color-black);
   color: var(--color-white);
+}
+main {
+  display: flex;
+  justify-content: center;
+}
+.tw_main {
+  width: 100%;
+  @media (width >= 48rem) {
+    width: calc(2/3 * 100%);
+  }
+  @media (width >= 64rem) {
+    width: calc(1/2 * 100%);
+  }
 }
 h1 {
   margin: calc(var(--spacing) * 4);
@@ -302,16 +286,22 @@ footer {
 }
 .tw_section {
   margin: calc(var(--spacing) * 4);
+  flex: none;
+  @media (width >= 48rem) {
+    display: flex;
+  }
+}
+.tw_section_1 {
   display: flex;
+  justify-content: center;
 }
 .tw_icon {
-  height: calc(var(--spacing) * 48);
   width: calc(var(--spacing) * 48);
   border-radius: var(--radius-2xl);
   border-style: var(--tw-border-style);
   border-width: 2px;
 }
-.tw_icon_desc {
+.tw_section_2 {
   margin-left: calc(var(--spacing) * 4);
 }
 .tw_button {
@@ -354,11 +344,6 @@ footer {
   syntax: "*";
   inherits: false;
 }
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
@@ -369,7 +354,6 @@ footer {
       --tw-skew-y: initial;
       --tw-border-style: solid;
       --tw-font-weight: initial;
-      --tw-outline-style: solid;
     }
   }
 }
